--- a/public/css/selectOption.css
+++ b/public/css/selectOption.css
@@ -41,13 +41,13 @@ html {
      color: white;
 }
 #button1 {
-     width: 20%;
+     width: 15%;
      font-size: 20px;
      color: white;
      padding: 8px;
      border-radius: 10px;
      border: 3px solid white;
-     background-color: green;
+     background-color: #AA98A9;
      text-align: center;
      font-family: "Open Sans";
      position: absolute;
@@ -115,14 +115,14 @@ html {
 }
 @media screen and (max-width: 600px) {
      #button1 {
-          width: 45%;
+          width: 35%;
           font-size: 20px;
           color: white;
           padding: 5px;
           border-radius: 15px;
           border: 3px solid white;
           font-family: "Open Sans";
-          background-color: green;
+          background-color: #AA98A9;
           text-align: center;
           position: absolute;
           top: 50%;
@@ -134,13 +134,13 @@ html {
           cursor: pointer;
      }
      #button2 {
-          width: 45%;
+          width: 35%;
           font-size: 20px;
           color: white;
           padding: 5px;
           border-radius: 15px;
           border: 3px solid white;
-          background-color: green;
+          background-color: #C2B280;
           text-align: center;
           font-family: "Open Sans";
           position: absolute;
