--- a/public/css/selectOption.css
+++ b/public/css/selectOption.css
@@ -25,7 +25,7 @@ html {
      display: block;
      color: #f2f2f2;
      text-align: center;
-     padding: 12.5px 126.5px;
+     padding: 12px 127px;
      text-decoration: none;
      font-size: 17px;
 }
@@ -60,13 +60,13 @@ html {
      cursor: pointer;
 }
 #button2 {
-     width: 20%;
+     width: 15%;
      font-size: 20px;
      color: white;
      padding: 8px;
      border-radius: 10px;
      border: 3px solid white;
-     background-color: #336b89;
+     background-color: #C2B280;
      text-align: center;
      font-family: "Open Sans";
      position: absolute;
@@ -108,7 +108,7 @@ html {
      display: block;
      color: #f2f2f2;
      text-align: center;
-     padding: 13px 20px;
+     padding: 12px 20px;
      text-decoration: none;
      font-size: 17px;
 }
@@ -119,7 +119,7 @@ html {
           font-size: 20px;
           color: white;
           padding: 5px;
-          border-radius: 15px;
+          border-radius: 8px;
           border: 3px solid white;
           font-family: "Open Sans";
           background-color: #AA98A9;
@@ -138,7 +138,7 @@ html {
           font-size: 20px;
           color: white;
           padding: 5px;
-          border-radius: 15px;
+          border-radius: 8px;
           border: 3px solid white;
           background-color: #C2B280;
           text-align: center;
