--- a/public/css/msignup.css
+++ b/public/css/msignup.css
@@ -36,9 +36,9 @@ select {
      height: 32px;
      border-radius: 5px;
      border: 2px solid white;
-     padding-left: 20px;
+     padding-left: 3px 3px 3px 20px;
      font-family: "Poppins";
-     font-size: 12px;
+     font-size: 14px;
      cursor: pointer;
 }
 .container {
