--- a/public/css/msignup.css
+++ b/public/css/msignup.css
@@ -36,7 +36,7 @@ select {
      height: 32px;
      border-radius: 5px;
      border: 2px solid white;
-     padding-left: 3px 3px 3px 20px;
+     padding: 3px 3px 3px 20px;
      font-family: "Poppins";
      font-size: 14px;
      cursor: pointer;
