--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -66,9 +66,9 @@ select {
      height: 32px;
      border-radius: 5px;
      border: 2px solid white;
-     padding-left: 20px;
+     padding: 3px 3px 3px 20px;
      font-family: "Poppins";
-     font-size: 12px;
+     font-size: 14px;
      cursor: pointer;
 }
 select:focus {
