--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -57,10 +57,12 @@ h2 {
 }
 option {
      color: orange;
-     background: transparent;
+     background: black;
+     opacity: 0.8;
 }
 select {
      background-color: black;
+     opacity: 0.8;
      color: white;
      width: 70%;
      border-radius: 5px;
