--- a/public/css/tenant.css
+++ b/public/css/tenant.css
@@ -1,55 +1,5 @@
-h1 {
-     text-align: center;
-     color: white;
-     font-size: 25px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-h2 {
-     color: orange;
-     font-size: 15px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(18%) translateY(+50%);
-}
-h3 {
-     color: white;
-     font-size: 15px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(18%) translateY(+20%);
-}
-p {
-     color: orange;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(10%) translateY(+50%);
-}
-#button {
-     margin: 40px auto 20px;
-     width: 70%;
-     display: block;
-     outline: none;
-     padding: 10px 0;
-     border: ipx solid orange;
-     cursor: pointer;
-     background: transparent;
-     color: orange;
-     font-size: 16px;
-     border-radius: 10px;
-     transform: translateX(5%) translateY(+50%);
-}
-#button:hover {
-     background-color: green;
-}
-.form-box {
-     width: 400px;
-     margin: auto;
-     background: black;
-     padding: 20px;
-     border-radius: 20px;
-     opacity: 0.8;
-     transform: translateX(0%) translateY(+20%);
+body {
+     margin: 0;
 }
 html {
      background: url(back.png) no-repeat center center fixed;
@@ -58,39 +8,100 @@ html {
      -o-background-size: cover;
      background-size: cover;
 }
+* {
+     box-sizing: border-box;
+     margin: 0;
+     padding: 0;
+     border: 0;
+}
+a:hover {
+     color: orange;
+}
+a {
+     color: white;
+     font-family: "Poppins";
+     font-size: 15px;
+     text-decoration: none;
+}
+.container {
+     width: 50%;
+     height: 100vh;
+     background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
+     padding: 30px 30px 30px 60px;
+     position: absolute;
+     right: 0;
+     margin: auto;
+     opacity: 0.8;
+}
+h1 {
+     font-family: "Open Sans";
+     font-size: 30px;
+     color: white;
+     text-align: center;
+     letter-spacing: 1px;
+     padding: 5px;
+}
+h2 {
+     font-family: "Poppins";
+     font-size: 18px;
+     color: white;
+     letter-spacing: 1px;
+     padding: 7px 0px 7px 0px;
+}
 option {
      color: orange;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      background-color: black;
 }
 select {
      background-color: black;
      color: white;
-     width: 200px;
-     height: 25px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+     width: 70%;
      border-radius: 5px;
+     border: 2px solid white;
+     padding: 3px 3px 3px 15px;
+     font-family: "Poppins";
+     font-size: 14px;
      cursor: pointer;
 }
-.input-select {
-     margin: 10px auto;
-     width: 80%;
-     padding-top: 0.5px;
+select:focus {
+     border: 2px solid #c2b280;
 }
-.input-box {
-     margin: 31px auto;
-     width: 80%;
-     border-bottom: 1px solid orange;
-     border-bottom-width: 50%;
-     padding-top: 5px;
-     transform: translateX(10%) translateY(+50%);
-}
+
 .input-box input {
-     width: 90%;
-     border: none;
-     outline: none;
-     background: transparent;
+     padding: 5px 5px 5px 30px;
+     border-radius: 5px;
+     font-family: "Poppins";
+     font-size: 14px;
      color: white;
+     background: black;
+     width: 75%;
+}
+.input-box input:focus {
+     border: 3px solid green;
+}
+
+.input-box i {
+     position: absolute;
+}
+.icon {
+     padding: 10px;
+     min-width: 40px;
+     color: white;
+}
+.eye {
+     position: absolute;
+}
+#button {
+     width: 40%;
+     background-color: green;
+     color: white;
+     padding: 7px;
+     border: 3px solid white;
+     border-radius: 10px;
+     text-align: center;
+     font-family: "Open Sans";
+     font-size: 18px;
+     letter-spacing: 1px;
+     margin-top: 50px;
+     cursor: pointer;
 }
