--- a/views/Tenant.hbs
+++ b/views/Tenant.hbs
@@ -6,7 +6,7 @@
                name="viewport"
                content="width=device-width, initial-scale=1.0"
           />
-          <title>Sign up</title>
+          <title>Tenant</title>
           <link
                rel="stylesheet"
                href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins&effect=outline|anaglyph"
@@ -20,22 +20,22 @@
                <h1 class="font-effect-outline">Details</h1>
                <h2>State</h2>
                <select name="state">
-                    <option>Telangana</option>
-               </select>
+                        <option>Telangana</option>
+                    </select>
                <h2>District</h2>
-               <select name="district">
-                    <option>Jangaon</option>
-               </select>
+              <select name="district">
+                        <option>Jangaon</option>
+                    </select>
                <h2>Town</h2>
                <select name="town">
-                    <option>Jangaon</option>
-               </select>
+                        <option>Jangaon</option>
+                    </select>
                <h2>Area</h2>
-               <select name="area">
-                    <option>Ganesh Street</option>
-                    <option>Sanjay Nagar</option>
-                    <option>Hyderabad Road</option>
-               </select>
+                <select name="area">
+                        <option>Ganesh Street</option>
+                        <option>Sanjay Nagar</option>
+                        <option>Hyderabad Road</option>
+                    </select>
                <form action="/findAddress" method="POST">
                     <input type="submit" value="Continue" id="button" />
                </form>
