--- a/views/result.hbs
+++ b/views/result.hbs
@@ -29,7 +29,7 @@
           <div class="container">
                <h1 class="font-effect-shadow-multiple">Houses Available</h1>
                <h2>Owner</h2>
-               <h3>{{firsName}} {{lastName}}</h3>
+               <h3>{{firstName}} {{lastName}}</h3>
                <h2>Email</h2>
                <h3>{{email}}</h3>
                <h2>State</h2>
