--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -56,7 +56,7 @@ h2 {
      font-family: "Poppins";
      font-size: 14px;
      color: white;
-     padding: 5px 0 5px 0;
+     padding: 0 0 5px 0;
 }
 
 .input-box input {
@@ -67,6 +67,7 @@ h2 {
      font-size: 12px;
      color: white;
      background: transparent;
+     margin-bottom: 5px;
      width: 90%;
 }
 .input-box input:focus {
