--- a/views/selectOption.hbs
+++ b/views/selectOption.hbs
@@ -13,8 +13,17 @@
           />
           <link rel="stylesheet" href="/css/selectOption.css" />
           <link rel="icon" href="icon.png" type="image/png" />
+           <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+          <script>
+               $(window).on("load", function () {
+                    $(".loader-wrapper").fadeOut("slow");
+               });
+          </script>
      </head>
      <body>
+          <div class="loader-wrapper" id="loader-wrapper">
+               <span class="loader"><span class="loader-inner"></span></span>
+          </div>
           <div class="topnav" id="myTopnav">
                <a href="intro.html" class="active">Home Rentals</a>
                <a href="/myAccount" onclick="myAccount()">Account</a>
