--- a/views/Owner.hbs
+++ b/views/Owner.hbs
@@ -28,8 +28,17 @@
                href="/css/mowner.css"
           />
             <link rel="icon" href="icon.png" type="image/png">
+             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+          <script>
+               $(window).on("load", function () {
+                    $(".loader-wrapper").fadeOut("slow");
+               });
+          </script>
      </head>
      <body>
+          <div class="loader-wrapper" id="loader-wrapper">
+               <span class="loader"><span class="loader-inner"></span></span>
+          </div>
           <div class="container">
                <form action="/saveAddress" method="POST">
                     <h1 class="font-effect-shadow-multiple">Details</h1>
