--- a/views/Tenant.hbs
+++ b/views/Tenant.hbs
@@ -14,8 +14,17 @@
           <link rel="stylesheet" media="screen and (min-width: 500px)" type="text/css" href="/css/tenant.css">
           <link rel="stylesheet" media="screen and (max-width: 499px)" type="text/css" href="/css/mtenant.css">
           <link rel="icon" href="icon.png" type="image/png">
+           <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+          <script>
+               $(window).on("load", function () {
+                    $(".loader-wrapper").fadeOut("slow");
+               });
+          </script>
      </head>
      <body>
+          <div class="loader-wrapper" id="loader-wrapper">
+               <span class="loader"><span class="loader-inner"></span></span>
+          </div>
           <div class="container">
              <form action="/findAddress" method="POST">
                <h1 class="font-effect-shadow-multiple">Details</h1>
