--- a/views/address.hbs
+++ b/views/address.hbs
@@ -28,8 +28,17 @@
                href="/css/maddress.css"
           />
           <link rel="icon" href="icon.png" type="image/png" />
+           <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+          <script>
+               $(window).on("load", function () {
+                    $(".loader-wrapper").fadeOut("slow");
+               });
+          </script>
      </head>
      <body>
+          <div class="loader-wrapper" id="loader-wrapper">
+               <span class="loader"><span class="loader-inner"></span></span>
+          </div>
           <div class="container">
                <h1 class="font-effect-shadow-multiple">Address</h1>
                <h2>State</h2>
