--- a/views/changePassword.hbs
+++ b/views/changePassword.hbs
@@ -29,8 +29,17 @@
                type="text/css"
                href="/css/mlogin.css"
           />
+           <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+          <script>
+               $(window).on("load", function () {
+                    $(".loader-wrapper").fadeOut("slow");
+               });
+          </script>
      </head>
      <body>
+     <div class="loader-wrapper" id="loader-wrapper">
+               <span class="loader"><span class="loader-inner"></span></span>
+          </div>
           <div class="container">
                <div class="login-box">
                     <form action="/newPassword" method="POST">
