--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -33,7 +33,8 @@ html {
      border-radius: 20px;
      padding:  20px 20px 30px 30px;
      opacity: 0.8;
-     background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
+     /*background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);*/
+     background: white;
      position: absolute;
      top: 50%;
      left: 50%;
