--- a/views/resetPassword.hbs
+++ b/views/resetPassword.hbs
@@ -20,7 +20,7 @@
                rel="stylesheet"
                media="screen and (min-width: 500px)"
                type="text/css"
-               href="/css/reserPassword.css"
+               href="/css/resetPassword.css"
           />
           <link
                rel="stylesheet"
