--- a/public/css/login.css
+++ b/public/css/login.css
@@ -29,16 +29,12 @@ html {
 .container {
      width: 50%;
      height: 100vh;
-     /*background-image: url("formBack.png");*/
      background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
      padding: 30px 30px 30px 60px;
      position: absolute;
      right: 0;
      opacity: 0.8;
-     /*"background-size: cover;
-     background-attachment: fixed;
-     background-position: center;
-     background-repeat: no-repeat;*/
+     backdrop-filter: blur(40px);
 }
 
 h1 {
