--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -17,6 +17,16 @@ html {
      -o-background-size: cover;
      background-size: cover;
 }
+::-webkit-scrollbar{
+     width: 10px;
+}
+::-webkit-scrollbar-track{
+      background: #1d191f;
+}
+::-webkit-scrollbar-thumb{
+      background: #a45aee;
+      border-radius: 15px;
+}
 a {
     color: white;
     text-decoration: none;
