--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -18,14 +18,13 @@ html {
      background-size: cover;
 }
 ::-webkit-scrollbar{
-     width: 10px;
+     width: 15px;
 }
 ::-webkit-scrollbar-track{
       background: #1d191f;
 }
 ::-webkit-scrollbar-thumb{
-      background: #a45aee;
-      border-radius: 15px;
+      background: #2d4059;
 }
 a {
     color: white;
