--- a/public/css/house.css
+++ b/public/css/house.css
@@ -14,7 +14,19 @@ html {
      padding: 0;
      border: 0;
 }
-
+:root{
+   scrollbar-color: #2d4059 #1d191f !important;
+   scrollbar-width: thin !important;  
+}
+::-webkit-scrollbar{
+     width: 15px;
+}
+::-webkit-scrollbar-track{
+      background: #1d191f;
+}
+::-webkit-scrollbar-thumb{
+      background: #2d4059;
+}
 .container {
      width: 50%;
      background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
