--- a/public/css/account.css
+++ b/public/css/account.css
@@ -83,34 +83,34 @@ h3 {
 #linkedIn{
      background: #007bb5;
      color: white;
-     padding: 15px;
-     font-size: 30px;
-     width: 15% ;
+     padding: 10px;
+     font-size: 25px;
+     width: 25% ;
      text-align: center;
      text-decoration: none;
-     margin: 20px;
+     margin: 20px 20px 20px 0p;
      border-radius: 15px;
 }
 #github{
      background: #dd4b39;
      color: white;
-     padding: 15px;
-     font-size: 30px;
-     width: 15%;
+     padding: 10px;
+     font-size: 25px;
+     width: 25%;
      text-align: center;
      text-decoration: none;
-     margin: 20px;
+     margin: 20px 20px 20px 0;
      border-radius: 15px;
 }
 #insta{
      background: #125688;
      color: white;
-     padding: 15px;
-     font-size: 30px;
-     width: 15%;
+     padding: 10px;
+     font-size: 25px;
+     width: 25%;
      text-align: center;
      text-decoration: none;
-     margin: 20px;
+     margin: 20px 20px 20px 0;
      border-radius: 15px;
 }
 .loader-wrapper {
