--- a/public/css/account.css
+++ b/public/css/account.css
@@ -99,7 +99,7 @@ h3 {
      width: 25%;
      text-align: center;
      text-decoration: none;
-     margin: 20px 20px 20px 0;
+     margin: 20px;
      border-radius: 15px;
 }
 #insta{
