--- a/public/css/maccount.css
+++ b/public/css/maccount.css
@@ -89,6 +89,39 @@ h3 {
      cursor: pointer;
      
 }
+#linkedIn{
+     background: #007bb5;
+     color: white;
+     padding: 10px;
+     font-size: 20px;
+     width: 20%;
+     text-align: center;
+     text-decoration: none;
+     margin: 10px;
+     border-radius: 10px;
+}
+#github{
+     background: #dd4b39;
+     color: white;
+     padding: 10px;
+     font-size: 20px;
+     width: 20%;
+     text-align: center;
+     text-decoration: none;
+     margin: 10px;
+     border-radius: 10px;
+}
+     #insta{
+     background: #125688;
+     color: white;
+     padding: 10px;
+     font-size: 20px;
+     width: 20%;
+     text-align: center;
+     text-decoration: none;
+     margin: 10px;
+     border-radius: 10px;
+}
 .loader-wrapper {
      width: 100%;
      height: 100%;
