--- a/public/css/maccount.css
+++ b/public/css/maccount.css
@@ -94,10 +94,10 @@ h3 {
      color: white;
      padding: 10px;
      font-size: 20px;
-     width: 25%;
+     width: 23%;
      text-align: center;
      text-decoration: none;
-     margin: 5px 10px 10px 0;
+     margin: 0 10px 10px 0;
      border-radius: 5px;
 }
 #github{
@@ -105,10 +105,10 @@ h3 {
      color: white;
      padding: 10px;
      font-size: 20px;
-     width: 25%;
+     width: 23%;
      text-align: center;
      text-decoration: none;
-     margin: 5px 10px 10px 10px;
+     margin: 0px 10px 10px 10px;
      border-radius: 5px;
 }
      #insta{
@@ -116,10 +116,10 @@ h3 {
      color: white;
      padding: 10px;
      font-size: 20px;
-     width: 25%;
+     width: 23%;
      text-align: center;
      text-decoration: none;
-     margin: 5px 0 10px 0;
+     margin: 0px 0 10px 0;
      border-radius: 5px;
 }
 .loader-wrapper {
