--- a/public/css/maccount.css
+++ b/public/css/maccount.css
@@ -97,7 +97,7 @@ h3 {
      width: 23%;
      text-align: center;
      text-decoration: none;
-     margin: 0 10px 10px 0;
+     margin: 0 10px 5px 0;
      border-radius: 5px;
 }
 #github{
@@ -108,7 +108,7 @@ h3 {
      width: 23%;
      text-align: center;
      text-decoration: none;
-     margin: 0px 10px 10px 10px;
+     margin: 0px 10px 5px 10px;
      border-radius: 5px;
 }
      #insta{
@@ -119,7 +119,7 @@ h3 {
      width: 23%;
      text-align: center;
      text-decoration: none;
-     margin: 0px 0 10px 0;
+     margin: 0 0 5px 0;
      border-radius: 5px;
 }
 .loader-wrapper {
