--- a/public/css/maccount.css
+++ b/public/css/maccount.css
@@ -97,8 +97,8 @@ h3 {
      width: 20%;
      text-align: center;
      text-decoration: none;
-     margin: 0 10px 5px 0;
-     border-radius: 5px;
+     margin: 10px;
+     border-radius: 10px;
 }
 #github{
      background: #dd4b39;
@@ -108,8 +108,8 @@ h3 {
      width: 20%;
      text-align: center;
      text-decoration: none;
-     margin: 0px 10px 5px 10px;
-     border-radius: 5px;
+     margin: 10px;
+     border-radius: 10px;
 }
      #insta{
      background: #125688;
@@ -119,8 +119,8 @@ h3 {
      width: 20%;
      text-align: center;
      text-decoration: none;
-     margin: 0 0 5px 0;
-     border-radius: 5px;
+     margin: 10px;
+     border-radius: 10px;
 }
 .loader-wrapper {
      width: 100%;
