--- a/public/css/mintro.css
+++ b/public/css/mintro.css
@@ -25,9 +25,11 @@ body {
      font-family: "Goldman";
      font-size: 35px;
      width: 100%;
-     position: absolute;
+     /*position: absolute;
      top: 20%;
-     left: 12%;
+     left: 12%;*/
+     text-align: center;
+     padding-top: 30px;
 }
 
 #button {
